--- a/css/contacto.css
+++ b/css/contacto.css
@@ -12,11 +12,10 @@
 .contacto__titulo {
     color: var(--fuente-ceniza-oscuro);
     font-weight: 700;
-    font-size: 1.5rem;
+    font-size: 24px;
     font-family: var(--montserrat);
     text-transform: uppercase;
     text-align: center;
-
     margin-bottom: 1.25rem;
 }
 
