--- a/css/destacados.css
+++ b/css/destacados.css
@@ -1,11 +1,18 @@
 .destacados {
-    background-color: var(--background-azul-claro);
+    display: flex;
+    flex-direction: column;
+    background: rgba(223, 227, 245, 1);
     padding-top: 2.5rem;
     padding-bottom: 2rem;
 }
 
+
 .destacados__titulo {
+    align-self: center;
+    padding: 2rem;
     font-family: var(--montserrat);
+    font-size: 20px;
+    font-weight: 900;
 }
 
 .destacados__panel {
@@ -13,17 +20,16 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 2rem;
+    padding: 0;
 }
 
 .destacados__panel-imagen {
     width: 100vw;
     max-width: 600px;
-    box-shadow: 0 2px 10px 5px #00000020;
+    box-shadow: 0 0 10px 5px #00000020;
+    margin: 0;
     margin-bottom: .5rem;
-}
-
-.destacados__panel-texto {
-
+    border: solid 1px red;
 }
 
 .destacados__boton {
