--- a/css/diferenciales.css
+++ b/css/diferenciales.css
@@ -1,6 +1,8 @@
 .diferenciales {
     padding-top: 3.5rem;
     padding-bottom: 3.5rem;
+    background: rgba(247, 244, 244, 1);
+    ;
 }
 
 .diferenciales__lista {
@@ -40,3 +42,6 @@
 .diferenciales__item-quimica {
     background-image: url(../img/icono-quimica.png);
 }
+
+
+   
