--- a/css/footer.css
+++ b/css/footer.css
@@ -2,31 +2,41 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
     background-color: var(--background-footer);
 
     padding-top: 2.5rem;
     padding-bottom: 2rem;
 }
 
-.footer__social {
+.footer__logo {
     display: flex;
+    margin-bottom: 1rem;
+    justify-content: space;
+    background-color: aqua;
+
+}
+
+.footer__social {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 32px;
+    padding: 72px 0px;
+    background-color: blueviolet;
 }
 
 .footer__midia {
     display: block;
-
     width: 42px;
     height: 42px;
-
     margin: 2rem 1rem;
 }
 
 .footer__navegacion {
-    color: var(--background-blanco);
+    color: var(--background-blanco); 
     font: var(--open-sans);
-    text-align: center;
+    text-align: left;
     line-height: 3;
+    background-color: blue;
 }
 
 
