--- a/css/planes.css
+++ b/css/planes.css
@@ -1,22 +1,25 @@
 .planes {
     background-color: var(--background-ceniza-claro);
-    
+    display: flex;
+    flex-direction: column;
     padding-top: 3rem;
     padding-bottom: 3rem;
 }
 
 .planes__titulo {
+    align-self: center;
     color: var(--fuente-ceniza-oscuro);
     font-size: 1.5rem;
     font-family: var(--montserrat);
-
     margin-bottom: 1.25rem;
 }
 
 .planes__tarjetas {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    gap: 1rem;
+    align-items: flex-end;
 }
 
 .tarjetas {
@@ -28,6 +31,8 @@
     width: 100%;
     max-width: 300px;
 
+    height: 23rem;
+
     margin-bottom: 2rem;
 
     border-radius: 5px;
@@ -38,23 +43,41 @@
     font-weight: 700;
     font-size: 1.5rem;
     text-align: center;
-
     padding: .75rem 0;
-
     margin-bottom: .5rem;
-
     border-bottom: 1px solid var(--background-azul-claro);
 }
 
+.tarjetas--start{
+    color: rgba(3, 90, 118, 1);
+}
+
+.tarjetas--ultra{
+    color: rgba(105, 15, 142, 1);
+}
+
+.tarjetas--mega{
+    color: rgba(176, 0, 36, 1);
+}
+
+
+
+
+   
+
 .tarjetas__contenido {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     padding: 0 15%;
+    height: 100%;
+    border: solid red;
 }
 
 .tarjetas__precio {
     font-weight: 700;
     font-size: 3rem;
     text-align: center;
-
     margin-top: 1.25rem;
     margin-bottom: 1.25rem;
 }
@@ -65,32 +88,26 @@
 }
 
 .tarjetas__boton {
-    font-size: 1.2rem;
-    font-weight: 700;
-
+    font-size: 24px;
+    text-align: center;
+    font-weight: 400;
     width: 100%;
-
-    align-self: center;
-
+    align-self: flex-end;
     padding: .75rem 2rem;
-
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
 
-.tarjetas--start {
-}
-
 .tarjetas--ultra {
-}
-
-.tarjetas--mega {
+    height: 25rem;
 }
 
 .tarjetas__boton--start {
+    border-radius: 8px;
 }
 
 .tarjetas__boton--ultra {
+
 }
 
 .tarjetas__boton--mega {
